Cchat-Firebase project full completed

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="" />
-    <title>Cchat</title>
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="shortcut icon" href="/img/logo/primaryLogo.svg">
+    <title>Firebase React Chat app</title>
   </head>
   <body>
     <div id="root"></div>
